--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <title></title>
 <p>&nbsp;</p>
 <div class="text-aling-center>
-<h1> <font color="cyan"> LA CAGASTE NIÑO RATA</font><h1/>
-		<b>
+<p> <font color="cyan"> LA CAGASTE NIÑO RATA</p>
 <p>  <font color="yellow"> Todos tus archivos an sido eliminados</p>
 <p>Si quieres recuperarlos escribe al siguiente Telegram</p>
 </font>
