--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p>&nbsp;</p>
 <div class="text-aling-center>
 <p> <font color="cyan"> LA CAGASTE NIÑO RATA</p>
-<p>  <font color="yellow"> Todos tus archivos an sido eliminados</p>
+<p> <H1> <font color="yellow"> Todos tus archivos an sido eliminados</p>
 <p>Si quieres recuperarlos escribe al siguiente Telegram</p>
 </font>
 <font color="cyan">
