--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <p>&nbsp;</p>
 <div class="text-aling-center>
 <p></p>
-<p> <font color="cyan"> LA CAGASTE NIÑO RATA</p>
-<p> <H1> <font color="yellow"> Todos tus archivos han sido eliminados</p>
+<p> <font color="cyan"> LA CAGASTE NIÑO RATA</font></p>
+<p> <H1> <font color="yellow"> Todos tus archivos an sido eliminados</p>
 <p>Si quieres recuperarlos escribe al siguiente Telegram</p>
 </font>
 <font color="cyan">
