--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <p> <H1> <font color="yellow"> Todos tus archivos an sido eliminados</p>
 <p>Si quieres recuperarlos escribe al siguiente Telegram</p>
 </font>
+<p> <font color="cyan"> LA CAGASTE NIÑO RATA</font></p>
 <font color="cyan">
 <p><u>@Ritorito1990</u></p>
 </font>
