--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <p></p>
 <p> <font color="cyan"> LA CAGASTE NIÑO RATA</font></p>
 <p> <H1> <font color="yellow"> Todos tus archivos an sido eliminados</p>
+<p> <font color="cyan"> LA CAGASTE NIÑO RATA</font></p>
 <p>Si quieres recuperarlos escribe al siguiente Telegram</p>
 </font>
 <p> <font color="cyan"> LA CAGASTE NIÑO RATA</font></p>
