--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="text-aling-center>
 <p></p>
 <p> <font color="cyan"> LA CAGASTE NIÑO RATA</font></p>
-<p> <H1> <font color="yellow"> Todos tus archivos an sido eliminados</p>
+<p> <H1> <font color="yellow"> Todos tus archivos han sido eliminados</p>
 <p> <font color="cyan"> LA CAGASTE NIÑO RATA</font></p>
 <p>Si quieres recuperarlos escribe al siguiente Telegram</p>
 </font>
