--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </font>
 <font color="cyan">
 <p><u>@Ritorito1990</u></p>
-<p><img alt="" src="raton.png" style="width: 960px; height: 350px;" /></p>
+<p><img alt="" src="raton.jpg" style="width: 960px; height: 350px;" /></p>
 </font>
 <font color="yellow"</u></p>
 </font>
