--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 <body background="hacker.gif">
 
-<p><img alt="" src="error.png" style="width: 960px; height: 350px;" /></p>
+<p><img alt="" src="raton.jpg" style="width: 960px; height: 350px;" /></p>
 </body>
 </html>
 <title></title>
